--- a/css/styles.css
+++ b/css/styles.css
@@ -1,27 +1,38 @@
 * html {
   box-sizing: border-box;
 }
+
 .wrapper {
   width: 700px;
 }
+
 .header {
   background-color: #e29938;
   color: #6d4817;
 }
+
 .imgholder {
   width: 700px;
 }
+
 .imgrow1 {
+  margin-top: 50px;
   width: 700px;
-  padding: 10px 10px 10px 10px;
+  height: 220px;
 }
+
 .imgrow2 {
   width: 700px;
-  padding: 10px 10px 10px 10px;
+  height: 220px;
 }
+
 .facepic {
   float:left;
   width: 120px;
   height: 90px;
+  margin: 10px 20px 10px 20px;
   border: 2px solid blue;
+}
+.footer {
+  float: right;
 }
